--- a/src/app/global.css
+++ b/src/app/global.css
@@ -3,6 +3,7 @@ body {
   font-family: var(--ff-body);
   font-size: var(--step--0);
   color: var(--clr-neutral-100);
+  height: 100%;
 }
 
 :is(h1, h2, h3) {
@@ -21,6 +22,11 @@ h2 {
 
 h3 {
   font-size: var(--step--1);
+}
+
+p {
+  line-height: 1.8;
+  max-width: 33ch;
 }
 
 a {
