--- a/src/app/[picture]/page.module.css
+++ b/src/app/[picture]/page.module.css
@@ -6,26 +6,31 @@
 }
 
 .pictureSection {
-  display: grid;
-  grid-template-columns: 1fr var(--space-xl) 1fr;
+  display: flex;
+
+  /* grid-template-columns: 1fr var(--space-xl) 1fr; */
+  /* min-width: 20rem; */
 }
 
 .imageWrapper {
-  grid-area: 1 / 1 / 2 / 3;
+  /* grid-area: 1 / 1 / 2 / 3; */
+  /* flex-shrink: 0; */
+  min-width: 30rem;
 }
 
 .titles {
-  grid-area: 1 / 2 / 1 / -1;
+  /* grid-area: 1 / 2 / 1 / -1; */
   background-color: var(--clr-neutral-500);
   align-self: start;
-  padding: 0 0 var(--space-xl) var(--space-xl);
+  padding: var(--space-xl) ;
   max-width: 35ch;
+  margin-left: calc(var(--space-xl) * -1);
 }
 
 .artistImage {
-  grid-area: 1 / 3 / 1 / -1;
-  align-self: end;
-  margin-left: var(--space-m);
+  /* grid-area: 1 / 3 / 1 / -1; */
+  /* align-self: end; */
+  /* margin-left: var(--space-m); */
 }
 
 .contentSection {
@@ -57,6 +62,7 @@
   justify-content: space-between;
   padding: var(--space-m) 0;
   align-items: center;
+  /* width: 100%; */
 }
 
 .buttons {
