--- a/src/app/global.css
+++ b/src/app/global.css
@@ -3,7 +3,7 @@ body {
   font-family: var(--ff-body);
   font-size: var(--step--0);
   color: var(--clr-neutral-100);
-  height: 100%;
+  max-height: 100vh;
 }
 
 :is(h1, h2, h3) {
